--- a/urltest.ini
+++ b/urltest.ini
@@ -6,7 +6,8 @@ custom_proxy_group=💻 NETFLIX`select`[]📌 手动切换`(?i)(Netflix|NF)
 custom_proxy_group=📧 Telegram`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌍 国际媒体`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=🍎 苹果服务`select`[]🟢 直接连接`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=  苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📌 手动切换`select`.*
@@ -33,7 +34,8 @@ surge_ruleset=🚄️ 国外网站,https://sub.jiaowoy.top/Rules/ConnersHua/Prof
 surge_ruleset=📧 Telegram,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Telegram.list
 
 ; Apple
-surge_ruleset=🍎 苹果服务,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Apple.list
+surge_ruleset=🍎 苹果API,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_API.list
+surge_ruleset=  苹果CDN,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
 
 ; 国内媒体
 surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Bilibili.list
