--- a/urltest.ini
+++ b/urltest.ini
@@ -23,15 +23,15 @@ custom_proxy_group=🟢 直接连接`select`[]DIRECT
 
 ;规则
 ; 局域网/路由器管理域名直连
-surge_ruleset=🟢 直接连接,https://sub.jiaowoy.top/Rules/ACL4SSR/Clash/LocalAreaNetwork.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 
 ; 后续规则修正
 surge_ruleset=🟢 直接连接,https://sub.jiaowoy.top/Rules/jiaowoy/Surge/NeteaseImage.list
 
 ; 应用代理
-surge_ruleset=🎵 网易云音乐,https://sub.jiaowoy.top/Rules/jiaowoy/Surge/NeteaseMusic.list
-surge_ruleset=🚄️ 国外网站,https://sub.jiaowoy.top/Rules/ConnersHua/Profiles/Surge/Ruleset/Speedtest.list
-surge_ruleset=📧 Telegram,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Telegram.list
+surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
+surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
 
 ; Apple
 surge_ruleset=🍏 苹果CDN,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
@@ -39,48 +39,49 @@ surge_ruleset=🍎 苹果API,https://raw.githubusercontent.com/MrRegret/MrRegret
 
 
 ; 国内媒体
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Bilibili.list
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/iQiyi.list
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Letv.list
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/MOO.list
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Tencent%20Video.list
-surge_ruleset=🌏 国内媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Youku.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/iQiyi.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Letv.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/MOO.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list
 
 ; 国际媒体
-surge_ruleset=💻 NETFLIX,https://sub.jiaowoy.top/Rules/ConnersHua/Profiles/Surge/Ruleset/Media/Netflix.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ABC.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Abema%20TV.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Amazon.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20News.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20TV.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Bahamut.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/DAZN.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Disney%20Plus.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/encoreTVB.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%20Now.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%2B.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/HBO.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu%20Japan.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Japonx.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/JOOX.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/KKBOX.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Line%20TV.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/myTV%20SUPER.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pandora.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/PBS.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pornhub.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Soundcloud.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ViuTV.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube%20Music.list
-surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube.list
+surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list
+surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ABC.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Abema%20TV.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Amazon.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20News.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20TV.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Bahamut.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/DAZN.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Disney%20Plus.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/encoreTVB.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%20Now.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%2B.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/HBO.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu%20Japan.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Japonx.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/JOOX.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/KKBOX.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Line%20TV.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/myTV%20SUPER.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pandora.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/PBS.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pornhub.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Soundcloud.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ViuTV.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube%20Music.list
+#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube.list
 
 ; 国外代理
-surge_ruleset=🚄️ 国外网站,https://sub.jiaowoy.top/Rules/ACL4SSR/Clash/ProxyLite.list
+surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 
 ; 国内直连
-surge_ruleset=🟢 直接连接,https://sub.jiaowoy.top/Rules/ACL4SSR/Clash/ChinaDomain.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
 
 ; 最终规则
