--- a/urltest.ini
+++ b/urltest.ini
@@ -6,7 +6,7 @@ custom_proxy_group=💻 NETFLIX`select`[]📌 手动切换`(?i)(Netflix|NF)
 custom_proxy_group=📧 Telegram`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌍 国际媒体`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
