--- a/urltest.ini
+++ b/urltest.ini
@@ -10,7 +10,7 @@ custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🌈 IPLC节点`[
 custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
-custom_proxy_group=📌 手动切换`select`(?!云音乐.)*$ 
+custom_proxy_group=📌 手动切换`select`^(?!.*云音乐).*$ 
 custom_proxy_group=🌈 IPLC节点`url-test`(IPLC|IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
@@ -27,7 +27,7 @@ custom_proxy_group=🟢 直接连接`select`[]DIRECT
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 
 ; 后续规则修正
-surge_ruleset=🟢 直接连接,https://sub.jiaowoy.top/Rules/jiaowoy/Surge/NeteaseImage.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Unbreak.list
 
 ; 应用代理
 surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
@@ -80,8 +80,15 @@ surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 
 ; 国外代理
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 ; 国内直连
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
 
