--- a/urltest.ini
+++ b/urltest.ini
@@ -1,15 +1,15 @@
 [custom]
 
 ;分组
-custom_proxy_group=🚄️ 国外网站`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
-custom_proxy_group=💻 NETFLIX`select`[]📌 手动切换`(?i)(Netflix|NF)
-custom_proxy_group=📧 Telegram`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
-custom_proxy_group=🌍 国际媒体`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=🚄️ 国外网站`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=💻 NETFLIX`select`[]🟢 直接连接`[]📌 手动切换`(?i)(Netflix|NF)
+custom_proxy_group=📧 Telegram`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
+custom_proxy_group=🌍 国际媒体`select`[]🟢 直接连接`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
-custom_proxy_group=🐟 漏网之鱼`select`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
+custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📌 手动切换`select`^(?!.*云音乐).*$ 
 custom_proxy_group=🌈 IPLC节点`url-test`(IPLC|IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
