--- a/urltest.ini
+++ b/urltest.ini
@@ -1,6 +1,6 @@
 [custom]
 
-;分组
+;分组 📌 手动切换`select`^(?!.*云音乐).*$ 
 custom_proxy_group=🚄️ 国外网站`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=💻 NETFLIX`select`[]🟢 直接连接`[]📌 手动切换`(?i)(Netflix|NF)
 custom_proxy_group=📧 Telegram`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
@@ -10,9 +10,9 @@ custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🌈 IPLC节点`[
 custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
-custom_proxy_group=📌 手动切换`select`^(?!.*云音乐).*$ 
-custom_proxy_group=🌈 IPLC节点`url-test`(IPLC|IEPL)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=🌈 IPLC节点`url-test`(限速|IPLC|IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|Singapore|新加坡|狮城|沪新|京新|泉新|穗新|深新|杭新)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(JP|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日)`http://www.gstatic.com/generate_204`300
@@ -50,33 +50,7 @@ surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/ma
 ; 国际媒体
 surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ABC.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Abema%20TV.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Amazon.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20News.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Apple%20TV.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Bahamut.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/DAZN.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Disney%20Plus.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/encoreTVB.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%20Now.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Fox%2B.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/HBO.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu%20Japan.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Hulu.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Japonx.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/JOOX.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/KKBOX.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Line%20TV.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/myTV%20SUPER.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pandora.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/PBS.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Pornhub.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/Soundcloud.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/ViuTV.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube%20Music.list
-#surge_ruleset=🌍 国际媒体,https://sub.jiaowoy.top/Rules/lhie1/Rules/Surge/Surge%203/Provider/Media/YouTube.list
+
 
 ; 国外代理
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
