--- a/urltest.ini
+++ b/urltest.ini
@@ -1,6 +1,8 @@
 [custom]
 
 ;分组 📌 手动切换`select`^(?!.*云音乐).*$ 
+custom_proxy_group=🎰 任天堂网络`select`[]🟢 直接连接`[]🌈 IPLC节点`[]📌 手动切换
+custom_proxy_group=🎮 任天堂下载`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🚄️ 国外网站`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=💻 NETFLIX`select`[]🟢 直接连接`[]📌 手动切换`(?i)(Netflix|NF)
 custom_proxy_group=📧 Telegram`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
@@ -10,16 +12,16 @@ custom_proxy_group=🍎 苹果API`select`[]🟢 直接连接`[]🌈 IPLC节点`[
 custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
-custom_proxy_group=📌 手动切换`select`^(?!.*云音乐).*$ 
+custom_proxy_group=📌 手动切换`select`.*
 custom_proxy_group=🌈 IPLC节点`url-test`(限速|IPLC|IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|Singapore|新加坡|狮城|沪新|京新|泉新|穗新|深新|杭新)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(JP|Japan|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|日)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korean|韩国|首尔|韩)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇺🇲 美国节点`url-test`(US|America|UnitedStates|美国|京美|沪美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|美)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇺🇲 美国节点`url-test`(US|America|UnitedStates|英|美国|京美|沪美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|美)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇷🇺 俄国节点`url-test`(RU|Russia|莫斯科|俄罗斯|俄)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇮🇳 印度节点`url-test`(IRI|India|印度|印)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇮🇳 印度节点`url-test`(IRI|India|印度|印|越)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🟢 直接连接`select`[]DIRECT
 
 ;规则
@@ -37,6 +39,10 @@ surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/lhie1/Rules/master
 ; Apple
 surge_ruleset=🍏 苹果CDN,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
 surge_ruleset=🍎 苹果API,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_API.list
+
+; Nintendo
+surge_ruleset=🎮 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
+surge_ruleset=🎰 任天堂网络,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_Srv
 
 
 ; 国内媒体
