--- a/urltest.ini
+++ b/urltest.ini
@@ -1,7 +1,7 @@
 [custom]
 
 ;分组 📌 手动切换`select`^(?!.*云音乐).*$ 
-custom_proxy_group=🎰 任天堂网络`select`[]🟢 直接连接`[]🌈 IPLC节点`[]📌 手动切换
+custom_proxy_group=🎰 任天堂网络`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇯🇵 日本节点`[]📌 手动切换
 custom_proxy_group=🎮 任天堂下载`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🚄️ 国外网站`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=💻 NETFLIX`select`[]🟢 直接连接`[]📌 手动切换`(?i)(Netflix|NF)
