--- a/urltest.ini
+++ b/urltest.ini
@@ -13,7 +13,7 @@ custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📌 手动切换`select`.*
-custom_proxy_group=🌈 IPLC节点`select`(限速|IPLC|IEPL)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🌈 IPLC节点`select`(Game|game|游戏|限速|IPLC|IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`select`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|Singapore|新加坡|狮城|沪新|京新|泉新|穗新|深新|杭新)`http://www.gstatic.com/generate_204`300
