--- a/urltest.ini
+++ b/urltest.ini
@@ -13,6 +13,7 @@ custom_proxy_group=🍏 苹果CDN`select`[]🟢 直接连接`[]🍎 苹果API
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📌 手动切换`select`.*
+custom_proxy_group=😈 全部节点测速`select`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🌈 IPLC节点`select`(Game|game|游戏|限速|IPLC|IEPL)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`select`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
@@ -36,12 +37,14 @@ surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ConnersHua/Pro
 ; 国内直连
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 
 
 
 
 ; 国内媒体
+surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/iQiyi.list
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Letv.list
@@ -51,19 +54,24 @@ surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/ma
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
 
 ; Nintendo
-surge_ruleset=🎮 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
+surge_ruleset=🎰 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
 surge_ruleset=🎰 任天堂网络,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_Srv
 ; 应用代理
 surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
 surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
 
 ; Apple
-surge_ruleset=🍏 苹果CDN,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
-surge_ruleset=🍎 苹果API,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_API.list
+surge_ruleset=🍎 苹果,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
+surge_ruleset=🍎 苹果,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_API.list
+surge_ruleset=🍎 苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 
+;Microsoft
+surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+surge_ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
 
 ; 国际媒体
-surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list
+surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
