--- a/urltest.ini
+++ b/urltest.ini
@@ -32,7 +32,7 @@ surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 ; 后续规则修正
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Unbreak.list
+;surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Unbreak.list
 
 ; 国内直连
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -45,20 +45,20 @@ surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 
 ; 国内媒体
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/iQiyi.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Letv.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/MOO.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list
-surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/iQiyi.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Letv.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/MOO.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list
+; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
 
 ; Nintendo
 surge_ruleset=🎰 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
 surge_ruleset=🎰 任天堂网络,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_Srv
 ; 应用代理
-surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
-surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
+;surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
+surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 
 ; Apple
 surge_ruleset=🍎 苹果,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Apple_CDN.list
