--- a/urltest.ini
+++ b/urltest.ini
@@ -1,6 +1,8 @@
 [custom]
 
 ;分组 📌 手动切换`select`^(?!.*云音乐).*$ 
+
+custom_proxy_group=😈 全部节点`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎰 任天堂网络`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇯🇵 日本节点`[]📌 手动切换
 custom_proxy_group=🎰 任天堂下载`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🎮 Xbox`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
@@ -14,7 +16,6 @@ custom_proxy_group=😊 微软`select`[]🟢 直接连接`[]😈 全部节点`[]
 custom_proxy_group=🎵 网易云音乐`select`[]🟢 直接连接`云音乐
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
 custom_proxy_group=📌 手动切换`select`.*
-custom_proxy_group=😈 全部节点`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🌈 IPLC节点`select`(Game|game|游戏|限速|IPLC|IEPL|打機)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`select`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`select`(?i)(TW|Taiwan|台湾|台北|台中|新北|彰化|CHT|HINET|台)`http://www.gstatic.com/generate_204`300
@@ -58,7 +59,7 @@ surge_ruleset=🟢 直接连接,[]GEOIP,CN
 surge_ruleset=🎰 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
 surge_ruleset=🎰 任天堂网络,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_Srv
 ; 应用代理
-;surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
+surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/Liquor030/Sub_Ruleset/master/Ruleset/Netease_Music.list
 surge_ruleset=📧 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 
 ; Apple
