--- a/urltest.ini
+++ b/urltest.ini
@@ -72,8 +72,9 @@ surge_ruleset=🍎 苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ;Microsoft
 surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+
 surge_ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
-surge_ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 
 ; 国际媒体
 surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
