--- a/urltest.ini
+++ b/urltest.ini
@@ -27,7 +27,7 @@ custom_proxy_group=📧 Telegram`select`[]🟢 直接连接`[]😈 全部节点`
 custom_proxy_group=🌍 国际媒体`select`[]🟢 直接连接`[]😈 全部节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]😈 全部节点`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
-
+custom_proxy_group=📺XPTV`select`[]🟢 直接连接
 ; ！！！！！！！！！前置规则优先级更高，会优先匹配
 
 ;规则
@@ -80,6 +80,8 @@ surge_ruleset=🎁 Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mas
 surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
+
+surge_ruleset=📺XPTV,https://raw.githubusercontent.com/fangkuia/XPTV/main/X/clash.yaml
 
 ; 最终规则
 surge_ruleset=🐟 漏网之鱼,[]FINAL
