--- a/urltest.ini
+++ b/urltest.ini
@@ -27,7 +27,9 @@ custom_proxy_group=📧 Telegram`select`[]🟢 直接连接`[]😈 全部节点`
 custom_proxy_group=🌍 国际媒体`select`[]🟢 直接连接`[]😈 全部节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]🟢 直接连接`[]😈 全部节点`[]📌 手动切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
 custom_proxy_group=🐟 漏网之鱼`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
-custom_proxy_group=📺XPTV`select`[]🟢 直接连接
+custom_proxy_group=📺 XPTV`select`[]🟢 直接连接
+custom_proxy_group=🎵 YouTubeMusic`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换`[]🟢 直接连接
+
 ; ！！！！！！！！！前置规则优先级更高，会优先匹配
 
 ;规则
@@ -47,6 +49,7 @@ surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 
+
 ; 国内媒体
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list
@@ -56,8 +59,11 @@ surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 ; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list
 ; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
+surge_ruleset=📺 XPTV,https://raw.githubusercontent.com/fangkuia/XPTV/main/X/clash.yaml
 
 ; 国际媒体
+surge_ruleset=🎵 YouTubeMusic,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/YoutubeMusic.list
+
 surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
@@ -81,7 +87,6 @@ surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 surge_ruleset=😊 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
 
-surge_ruleset=📺XPTV,https://raw.githubusercontent.com/fangkuia/XPTV/main/X/clash.yaml
 
 ; 最终规则
 surge_ruleset=🐟 漏网之鱼,[]FINAL
