--- a/urltest.ini
+++ b/urltest.ini
@@ -48,7 +48,7 @@ surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-
+surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/Direct.list
 
 ; 国内媒体
 surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -68,6 +68,8 @@ surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 surge_ruleset=💻 NETFLIX,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+
+surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/Foreign.list
 
 ; Nintendo
 surge_ruleset=🎰 任天堂下载,https://raw.githubusercontent.com/MrRegret/MrRegret/master/Nintendo_D
