--- a/urltest.ini
+++ b/urltest.ini
@@ -59,6 +59,9 @@ surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 ; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list
 ; surge_ruleset=🌏 国内媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list
 surge_ruleset=🟢 直接连接,[]GEOIP,CN
+
+surge_ruleset=📺 emby,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/emby.list
+
 surge_ruleset=📺 XPTV,https://raw.githubusercontent.com/fangkuia/XPTV/main/X/clash.yaml
 
 ; 国际媒体
