--- a/urltest.ini
+++ b/urltest.ini
@@ -2,7 +2,7 @@
 
 ;分组 📌 手动切换`select`^(?!.*云音乐).*$ 
 
-custom_proxy_group=😈 全部节点`url-test`.*`https://www.gstatic.com/generate_204`300
+custom_proxy_group=😈 全部节点`url-test`.*`http://www.google.com/generate_204`300
 custom_proxy_group=📌 手动切换`select`.*
 custom_proxy_group=🌈 IPLC节点`url-test`(Game|game|游戏|限速|IPLC|IEPL|打機)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(HK|Hong.*?Kong|香港|港|深港|沪港|呼港|HKT|HKBN|HGC|WTT|CMI|京港)`http://www.gstatic.com/generate_204`300
