--- a/urltest.ini
+++ b/urltest.ini
@@ -99,10 +99,12 @@ surge_ruleset=🌍 国际媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/Foreign.list
+surge_ruleset=📈 股票相关,https://raw.githubusercontent.com/jixiangqd/Clashconfig/master/ruleset/tradingview.list
 ; Nintendo
 
 ; 最终规则
 surge_ruleset=🐟 漏网之鱼,[]FINAL
+
 
 
 
