--- a/urltest.ini
+++ b/urltest.ini
@@ -34,8 +34,9 @@ custom_proxy_group=📺 XPTV`select`[]🟢 直接连接
 custom_proxy_group=📺 emby`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=🎵 YouTubeMusic`select`[]🟢 直接连接`[]😈 全部节点`[]🌈 IPLC节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
 custom_proxy_group=📈 股票相关`select`[]🟢 直接连接`[]😈 全部节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇷🇺 俄国节点`[]🇮🇳 印度节点`[]📌 手动切换
-; ！！！！！！！！！前置规则优先级更高，会优先匹配
 
+
+; ！！！！！！！！！下面前置规则优先级更高，会优先匹配
 ;规则
 ; 局域网/路由器管理域名直连
 surge_ruleset=🟢 直接连接,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -105,6 +106,7 @@ surge_ruleset=🚄️ 国外网站,https://raw.githubusercontent.com/jixiangqd/C
 
 ; 最终规则
 surge_ruleset=🐟 漏网之鱼,[]FINAL
+
 
 
 
